--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -54,13 +54,13 @@
           </div>
         </button>
       </mat-card-header>
-      <mat-card-header>
+      <!-- <mat-card-header>
         <button mat-card-avatar class="example-header-image8 commonClass" routerLink="/admin/profile">
           <div class="button-content">
             <h3><b>Logout</b></h3>
           </div>
         </button>
-      </mat-card-header>
+      </mat-card-header> -->
   
     </mat-action-list>
   </mat-card>
