--- a/src/app/components/User/instructions/instructions.component.html
+++ b/src/app/components/User/instructions/instructions.component.html
@@ -44,9 +44,11 @@
                             <li>Report of the test is automatically generated in the form of PDF copy.</li>
                         </ul>
                     </mat-card-content>
-                    <mat-card-actions class="text-center">
+                    <mat-card-actions >
                         <!-- action -->
-                        <button (click)="startQuiz()" mat-raised-button color="primary">Start Quiz</button>
+                        <div class="container text-center">
+                            <button (click)="startQuiz()" mat-raised-button color="primary">Start Quiz</button>
+                        </div>
                     </mat-card-actions>
                 </mat-card>
             </div>
