--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -6,7 +6,7 @@
                     <img src="/assets/exam.png"  class="circular-image mt20" alt=""/>
                 </div>
                 <h1 class="text-center">Register Here</h1>
-                {{user | json}}
+                <!-- {{user | json}} -->
                 <form (ngSubmit)="formSubmit()">
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>User Name</mat-label>
@@ -39,7 +39,7 @@
 
                     <div class="container text-center">
                         <button mat-raised-button color="primary">Register</button>
-                        <button mat-raised-button color="warn" class="ml20">Reset</button>
+                        <!-- <button mat-raised-button color="warn" class="ml20">Reset</button> -->
                     </div>
                 </form>
             </div>
